--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.7.11",
+    "axios": "^0.27.2",
     "leaflet": "^1.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
